# comfyui_psd_smart_object

./: README.md  __init__.py  psd_mockup_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/js/: psd_mockup_upload.js
