[project]
name = "psd_smart_object"
description = "ComfyUI nodes for working with Photoshop mockup files - automatically project images onto PSD smart objects while preserving perspective, rotation, and scale transforms for seamless mockup rendering."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["psd-tools>=1.11.0", "opencv-python-headless>=4.8.0", "numpy>=1.23.0", "Pillow>=10.0.0"]

[project.urls]
Repository = "https://github.com/leafiy/comfyui_psd_smart_object"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/leafiy/comfyui_psd_smart_object/wiki"
"Bug Tracker" = "https://github.com/leafiy/comfyui_psd_smart_object/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_psd_smart_object"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

